--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "bootstrap": "^5.0.2",
-        "bootstrap-vue": "^2.21.2"
+        "bootstrap": "^4.5.3",
+        "bootstrap-vue": "^2.21.2",
+        "jquery": "^1.9.1"
     }
 }
